# python-sdk-building-process

./: LICENSE  README.md  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
demo-elt-framework/: pyproject.toml
demo-elt-framework/src/demo_elt_framework/: transforms.py
demo-elt-framework/src/demo_elt_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/demo_elt_framework/: cli.py  exceptions.py  math_ops.py
tests/: test_math_ops.py  test_transforms.py
