[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-elt-framework"
version = "0.1.0"
description = "Internal demo ELT framework (math ops + basic data transforms) with CLI."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Kunal Shrivastava"}]
keywords = ["elt", "sdk", "cli", "internal"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/ks-ai-prototype/python-sdk-building-process"
Repository = "https://github.com/ks-ai-prototype/python-sdk-building-process"

[project.scripts]
demo-elt = "demo_elt_framework.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
